--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/legacy-factories": "^1.0",
+        "laravel/socialite": "^5.14",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "tymon/jwt-auth": "^1.0"
